test/org/midica/testfiles/failing/channel-negative-2.midica
INCLUDE inc/instruments.midica

-1  c  /4
